# IPINN

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  IMPROVEMENTS.md  LC1.xlsx  LC2.xlsx  LICENSE  README.md  composite_design.py  composite_design_v19.py  composite_design_v20.py  environment.yml  hpc_run_stage.py  pyproject.toml  requirements.txt  submit_pipeline.sh
.github/workflows/: ci.yml
data/: README.md
docs/: ARCHITECTURE.md
hpo/: README.md  compare_methods.py  compare_soft_vs_hard.py  forward_member.py  forward_merge.py  hpo_search.py  inverse_member.py  inverse_merge.py  merge_inverse_members.py  merge_stage2_members.py  stage2_member.py  stage2_v16.py  tune_v20.py
paper/: README.md  editorial_panel_report.md  manuscript_v2.md  reviewer2_response.md  supplementary.md
paper/figures/: README.md  REVISION_NOTES.md
paper/tables/: README.md  STATISTICAL_TESTING_POLICY.txt  Table1_forward_results.csv  Table2_statistical_tests.csv  Table3_inverse_design.csv  Table4_model_complexity.csv  Table5_per_LC_breakdown.csv  Table_baseline_comparison.csv  Table_classifier_ablation.csv  Table_compute_reproducibility_budget.csv  Table_crush_mode_signatures.csv  Table_d_common_sensitivity.csv  Table_d_common_sensitivity_EA_grid.csv  Table_densification_kinematics.csv  Table_design_variance_decomposition.csv  Table_ea_ipf_scalar_calibration.csv  Table_forward_design_errors.csv  Table_inverse_design_explanation.csv  Table_inverse_robustness.csv  Table_inverse_verification.csv  Table_lambda_sensitivity.csv  Table_lc_classifier_cv_predictions.csv  Table_master_curve_collapse.csv  Table_null_baseline_design_level.csv  Table_optimizer_comparison.csv  Table_pareto_chebyshev.csv  Table_pareto_dominance.csv  Table_pareto_lc_dominance_audit.csv  Table_physical_plausibility_audit.csv  Table_physics_verification.csv  Table_uncertainty_calibration.csv  forward_ddns_results.json  forward_hard_results.json  forward_soft_results.json
scripts/: ablation_theta_generalization.py  build_forward_models_bundle.py  mechanics_analysis.py  smoke_hard_load_vs_energy.py
slurm/: README.md  hpc_run_stage.py  launch_three_hpos.sh  submit_forward.sh  submit_hpo.sh  submit_hpo_ddns.sh  submit_hpo_hard.sh  submit_hpo_soft.sh  submit_inverse.sh  submit_inverse_hard_array.sh  submit_pipeline.sh  submit_stage2_hard_array.sh  submit_stage2_v16.sh
tests/: conftest.py  test_core.py  test_hard_architectures.py  test_hard_load_net.py  test_helpers_manifest.py  test_inverse_design.py  test_smoke.py  test_validation_suite.py
tests/fixtures/: tiny_crush.csv
