[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipinn-crashworthiness"
version = "0.19.0"
description = "Physics-informed neural networks for forward prediction and inverse design of composite ring structures under quasi-static crushing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
    "torch>=2.1,<3",
]

[project.optional-dependencies]
gpbo = ["scikit-optimize>=0.10.1"]
mobo = ["gpytorch>=1.11", "botorch>=0.9.2"]
all = ["scikit-optimize>=0.10.1", "gpytorch>=1.11", "botorch>=0.9.2"]
test = ["pytest>=7.4"]

[project.scripts]
ipinn = "composite_design_v19:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
