[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipinn-crashworthiness"
version = "0.19.0"
description = "Physics-informed neural networks for forward prediction and inverse design of composite ring structures under quasi-static crushing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "physics-informed neural networks",
    "crashworthiness",
    "composite structures",
    "inverse design",
    "Bayesian optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "scikit-learn>=1.3",
    "torch>=2.1,<3",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
gpbo = ["scikit-optimize>=0.10.1"]
mobo = ["gpytorch>=1.11", "botorch>=0.9.2"]
all = ["scikit-optimize>=0.10.1", "gpytorch>=1.11", "botorch>=0.9.2"]
test = ["pytest>=7.4"]
dev = ["pytest>=7.4", "scikit-optimize>=0.10.1", "gpytorch>=1.11", "botorch>=0.9.2"]

[project.scripts]
ipinn = "composite_design_v19:main"

[project.urls]
Repository = "https://github.com/kprodigi/IPINN"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
